--- a/apache-tomcat-8.0.47/webapps/proyecto/createaccount.html
+++ b/apache-tomcat-8.0.47/webapps/proyecto/createaccount.html
@@ -3,23 +3,53 @@
 <html>
 	<header>
 		<meta charset = "UTF-8">
-		<title> Inicio </title>
+		<title> Registrate </title>
+		<link rel="stylesheet" href="registrate.css" type = "text/css">
 	</header>
 	<body>
-		<form action = "check">
-			<label> Nuevo Usuario
-				<input type ="text" name = "login" placeholder="usuario@ejemplo.com">
-			</label>
+		<form action = "register">
 			<div>
-				<label> Contraseña
-					<input type = "password" name ="pass">
+				<label> Nombre
+					<input type ="text" name = "name">
 				</label>
 			</div>
 			<div>
-				<input type = "submit" name = "init" value ="Iniciar Sesión ">
+				<label> Apellidos
+					<input type ="text" name = "surname">
+				</label>
+			</div>
+			<div>
+				<label> Usuario
+					<input type ="email" name = "nick" placeholder = "example@example.com">
+				</label>
+			</div>
+			<div>
+				<label> Repetir Usuario
+					<input type ="email" name = "nickrepeat" placeholder = "example@example.com">
+				</label>
+			</div>
+			<div>			
+				<label> Contraseña
+					<input type ="password" name = "newpass">
+				</label>
+			</div>
+			<div>
+				<label> Repetir Contraseña
+					<input type ="password" name = "newpassrepeat">
+				</label>
+			</div>
+			<div>
+				<label> Dirección
+					<input type ="text" name = "address">
+				</label>
+			</div>
+			<div>
+				<label> Número de Telefono
+					<input type ="tel" name = "phone">
+				</label>
+			</div>
+			<div>
+				<input type = "submit" name = "register" value ="Regístrame">
 			</div>
 		</form>	
-
-		<input type = "submit" name = "create" value ="Regístrate ">
-
 	</body>
