--- a/apache-tomcat-8.0.47/webapps/proyecto/index.html
+++ b/apache-tomcat-8.0.47/webapps/proyecto/index.html
@@ -3,23 +3,29 @@
 <html>
 	<header>
 		<meta charset = "UTF-8">
-		<title> Inicio </title>
+		<title> Login </title>
+		<link rel="stylesheet" href="init.css" type = "text/css">
 	</header>
 	<body>
-		<form action = "check">
-			<label> Usuario
-				<input type ="text" name = "login" placeholder="usuario@ejemplo.com">
-			</label>
-			<div>
-				<label> Contraseña
-					<input type = "password" name ="pass">
-				</label>
+		<div id = "container">
+			<div id="centralbox">
+				<form action = "check">
+					<label> <strong>Usuario</strong>
+						<input type ="email" name = "login" class = "in" id ="txtalgn" placeholder="usuario@ejemplo.com">
+					</label>
+					<div>
+						<label> <strong>Contraseña</strong>
+							<input type = "password" class = "in" id = "txtalgn1" name ="pass">
+						</label>
+					</div>
+					<div id="centralbutton">
+						<input type = "submit" name = "init" value ="Iniciar Sesión ">
+					</div>
+				</form>	
 			</div>
-			<div>
-				<input type = "submit" name = "init" value ="Iniciar Sesión ">
-			</div>
-		</form>	
-
-		<input type = "submit" name = "create" value ="Regístrate ">
-
+			
+		</div>
+		<form action = "createaccount.html">
+			<input type = "submit" name = "create" value ="Regístrate ">
+		</form>
 	</body>
