Añadimos: Cerrar sesion, ViewClient terminado, base de datos completa,

--- a/apache-tomcat-8.0.47/webapps/proyecto/createaccount.html
+++ b/apache-tomcat-8.0.47/webapps/proyecto/createaccount.html
@@ -40,7 +40,12 @@
 			</div>
 			<div>
 				<label> Dirección
-					<input type ="text" name = "address">
+					<input type ="text" name = "address" placeholder = "C/calle, N83, CP">
+				</label>
+			</div>
+			<div>
+				<label> Ciudad
+					<input type ="text" name = "ciudad" placeholder = "Ciudad, p.ej: Madrid">
 				</label>
 			</div>
 			<div>
