Arreglado bug registro

--- a/apache-tomcat-8.0.47/webapps/proyecto/createaccount.html
+++ b/apache-tomcat-8.0.47/webapps/proyecto/createaccount.html
@@ -10,51 +10,51 @@
 		<form action = "register">
 			<div>
 				<label> Nombre
-					<input type ="text" name = "name">
+					<input type ="text" name = "name" required>
 				</label>
 			</div>
 			<div>
 				<label> Apellidos
-					<input type ="text" name = "surname">
+					<input type ="text" name = "surname" required>
 				</label>
 			</div>
 			<div>
 				<label> Usuario
-					<input type ="email" name = "nick" placeholder = "example@example.com">
+					<input type ="email" name = "nick" placeholder = "example@example.com" required>
 				</label>
 			</div>
 			<div>
 				<label> Repetir Usuario
-					<input type ="email" name = "nickrepeat" placeholder = "example@example.com">
+					<input type ="email" name = "nickrepeat" placeholder = "example@example.com" required>
 				</label>
 			</div>
 			<div>			
 				<label> Contraseña
-					<input type ="password" name = "newpass">
+					<input type ="password" name = "newpass" required>
 				</label>
 			</div>
 			<div>
 				<label> Repetir Contraseña
-					<input type ="password" name = "newpassrepeat">
+					<input type ="password" name = "newpassrepeat" required>
 				</label>
 			</div>
 			<div>
 				<label> Dirección
-					<input type ="text" name = "address" placeholder = "C/calle, N83, CP">
+					<input type ="text" name = "address" placeholder = "C/calle, N83, CP" required>
 				</label>
 			</div>
 			<div>
 				<label> Ciudad
-					<input type ="text" name = "ciudad" placeholder = "Ciudad, p.ej: Madrid">
+					<input type ="text" name = "ciudad" placeholder = "Ciudad, p.ej: Madrid" required>
 				</label>
 			</div>
 			<div>
 				<label> Número de Telefono
-					<input type ="tel" name = "phone">
+					<input type ="tel" name = "phone" required>
 				</label>
 			</div>
 			<div>
-				<input type = "submit" name = "register" value ="Regístrame">
+				<input type = "submit" name = "register" value ="Regístrame" required>
 			</div>
 		</form>	
 	</body>
