Mejorado flujo Gets y Posts

--- a/apache-tomcat-8.0.47/webapps/proyecto/createaccount.html
+++ b/apache-tomcat-8.0.47/webapps/proyecto/createaccount.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="registrate.css" type = "text/css">
 	</header>
 	<body>
-		<form action = "register">
+		<form action = "register" method = "post">
 			<div>
 				<label> Nombre
 					<input type ="text" name = "name" required>
