--- a/apache-tomcat-8.0.47/webapps/proyecto/index.html
+++ b/apache-tomcat-8.0.47/webapps/proyecto/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id = "container">
 			<div id="centralbox">
-				<form action = "check">
+				<form action = "check" method = "post">
 					<label> <strong>Usuario</strong>
 						<input type ="email" name = "login" class = "in" id ="txtalgn" placeholder="usuario@ejemplo.com">
 					</label>
@@ -25,7 +25,7 @@
 			</div>
 			
 		</div>
-		<form action = "createaccount.html">
+		<form action = "createaccount.html" method = "post">
 			<input type = "submit" name = "create" value ="Regístrate ">
 		</form>
 	</body>
