--- a/apache-tomcat-8.0.47/webapps/proyecto/index.html
+++ b/apache-tomcat-8.0.47/webapps/proyecto/index.html
@@ -5,6 +5,7 @@
 		<meta charset = "UTF-8">
 		<title> Login </title>
 		<link rel="stylesheet" href="init.css" type = "text/css">
+		<script src='https://www.google.com/recaptcha/api.js'></script>
 	</header>
 	<body>
 		<div id = "container">
@@ -21,6 +22,7 @@
 					<div id="centralbutton">
 						<input type = "submit" name = "init" value ="Iniciar Sesión ">
 					</div>
+					<div class="g-recaptcha" data-sitekey="6LfcS1YUAAAAAGDNCpvk0AjLsQiHwv97voqZyMwR"></div>
 				</form>	
 			</div>
 			
