--- a/apache-tomcat-8.0.47/webapps/proyecto/index.html
+++ b/apache-tomcat-8.0.47/webapps/proyecto/index.html
@@ -9,7 +9,7 @@
 	</header>
 	<body>
 		<div id = "container">
-			<div id="centralbox">
+			<div class="centralbox">
 				<form action = "check" method = "post">
 					<label> <strong>Usuario</strong>
 						<input type ="email" name = "login" class = "in" id ="txtalgn" placeholder="usuario@ejemplo.com">
@@ -23,9 +23,9 @@
 						<div class="g-recaptcha" data-sitekey="6LdB01cUAAAAABA2ujXDmEmc39TXdGAFkIru37Dm"></div>
 				</form>
 			</div>
-			
+			<form action = "createaccount.html" method = "post">
+					<input type = "submit" name = "create" value ="Regístrate ">
+			</form>
 		</div>
-		<form action = "createaccount.html" method = "post">
-			<input type = "submit" name = "create" value ="Regístrate ">
-		</form>
+
 	</body>
