--- a/apache-tomcat-8.0.47/webapps/proyecto/createaccount.html
+++ b/apache-tomcat-8.0.47/webapps/proyecto/createaccount.html
@@ -7,56 +7,49 @@
 		<link rel="stylesheet" href="registrate.css" type = "text/css">
 	</header>
 	<body>
-		<div class = container>
-			<div class = centralbox>
+		<div class = "container">
+			<div class = "centralbox">
 				<form action = "register" method = "post">
-					<div>
-						<label> Nombre
-							<input type ="text" name = "name" required>
-						</label>
-					</div>
-					<div>
-						<label> Apellidos
+					<div class = "boxes">
+						<label> Nombre </label>
+						<div>
+							<input type ="text" name = "name" class ="in" required>
+						</div>
+						<label> Apellidos </label>
+						<div>
 							<input type ="text" name = "surname" class = "in" required>
-						</label>
-					</div>
-					<div>
-						<label> Usuario
+						</div>
+						<label> Email </label>
+						<div>
 							<input type ="email" name = "nick" class = "in" placeholder = "example@example.com" required>
-						</label>
-					</div>
-					<div>
-						<label> Repetir Usuario
+						</div>
+						<label> Repetir Email </label>
+						<div>
 							<input type ="email" name = "nickrepeat" class = "in" placeholder = "example@example.com" required>
-						</label>
-					</div>
-					<div>
-						<label> Contraseña
+						</div>
+						<label> Contraseña </label>
+						<div>
 							<input type ="password" name = "newpass" class = "in" required>
-						</label>
-					</div>
-					<div>
-						<label> Repetir Contraseña
+						</div>
+						<label> Repetir Contraseña </label>
+						<div>
 							<input type ="password" name = "newpassrepeat" class = "in" required>
-						</label>
-					</div>
-					<div>
-						<label> Dirección
+						</div>
+						<label> Dirección </label>
+						<div>
 							<input type ="text" name = "address" class = "in" placeholder = "C/calle, N83, CP" required>
-						</label>
-					</div>
-					<div>
-						<label> Ciudad
+						</div>
+						<label> Ciudad </label>
+						<div>
 							<input type ="text" name = "ciudad" class = "in" placeholder = "Ciudad, p.ej: Madrid" required>
-						</label>
-					</div>
-					<div>
-						<label> Número de Telefono
+						</div>
+						<label> Número de Telefono </label>
+						<div>
 							<input type ="tel" name = "phone" class = "in" required>
-						</label>
-					</div>
-					<div>
-						<input type = "submit" name = "register" value ="Regístrame" required>
+						</div>
+						<div>
+							<input type = "submit" name = "register" value ="Regístrame" required>
+						</div>
 					</div>
 				</form>
 			</div>
