--- a/apache-tomcat-8.0.47/webapps/proyecto/index.html
+++ b/apache-tomcat-8.0.47/webapps/proyecto/index.html
@@ -11,14 +11,18 @@
 		<div id = "container">
 			<div class="centralbox">
 				<form action = "check" method = "post">
-					<label> <strong>Usuario</strong>
-						<input type ="email" name = "login" class = "in" id ="txtalgn" placeholder="usuario@ejemplo.com">
-					</label>
-					<div>
-						<label> <strong>Contraseña</strong>
-							<input type = "password" class = "in" id = "txtalgn1" name ="pass">
-						</label>
+					<div class = "cntr">
+						<label> <strong>Email</strong></label>
 					</div>
+						<div>
+							<input type ="email" name = "login" class = "in" id ="txtalgn" placeholder="usuario@ejemplo.com">
+						</div>
+						<div class = "cntr">
+							<label> <strong>Contraseña</strong> </label>
+						</div>
+						<div>
+							<input type = "password" class = "in" id = "txtalgn1" name ="pass">
+					  </div>
 						<input type = "submit" name = "init" value ="Iniciar Sesión ">
 						<div class="g-recaptcha" data-sitekey="6LdB01cUAAAAABA2ujXDmEmc39TXdGAFkIru37Dm"></div>
 				</form>
